--- a/crossword_game.html
+++ b/crossword_game.html
@@ -4,12 +4,12 @@
 <meta charset="UTF-8">
 <title>Mini Crossword Game</title>
 <style>
-  body { font-family: Arial; text-align:center; background:#f0f0f0; margin:0; padding:0;}
-  #container { max-width:600px; margin:50px auto; background:white; padding:20px; border-radius:10px; box-shadow:0 0 10px rgba(0,0,0,0.2);}
+  body { font-family: Arial, sans-serif; text-align:center; background:#f0f0f0; margin:0; padding:0;}
+  #container { max-width:500px; margin:50px auto; background:white; padding:20px; border-radius:10px; box-shadow:0 0 10px rgba(0,0,0,0.2);}
   button { padding:10px 20px; margin:10px; font-size:16px; cursor:pointer;}
-  table { margin: 0 auto; border-collapse: collapse; }
-  td { width: 40px; height: 40px; border:1px solid #333; text-align:center; vertical-align: middle;}
-  input { width: 100%; height:100%; text-align:center; font-size:16px; border:none;}
+  table { margin:0 auto; border-collapse: collapse; }
+  td { width:40px; height:40px; border:1px solid #333; text-align:center; vertical-align: middle;}
+  input { width:100%; height:100%; text-align:center; font-size:16px; border:none;}
 </style>
 </head>
 <body>
@@ -17,13 +17,15 @@
 <div id="container">
   <h2>Mini Crossword Game</h2>
 
+  <!-- Start Screen -->
   <div id="startScreen">
     <input type="text" id="playerName" placeholder="Enter your name"><br>
     <button onclick="startGame()">Start Game</button>
   </div>
 
+  <!-- Game Screen -->
   <div id="gameScreen" style="display:none;">
-    <p>Solve the crossword below:</p>
+    <p>Solve the crossword:</p>
     <table>
       <tr>
         <td><input maxlength="1" id="cell0"></td>
@@ -51,9 +53,10 @@
       </tr>
     </table>
     <br>
-    <button onclick="checkAnswers()">Check Answers</button>
+    <button onclick="checkAnswers()">Submit Answers</button>
   </div>
 
+  <!-- Game Over Screen -->
   <div id="gameOverScreen" style="display:none;">
     <h3 id="finalMessage"></h3>
     <button onclick="playAgain()">Play Again</button>
@@ -61,7 +64,7 @@
 </div>
 
 <script>
-// Answers for crossword (row-wise)
+// Correct answers (4x4 grid)
 const answers = [
   'C','A','R','S',
   'O','V','E','R',
@@ -69,33 +72,33 @@ const answers = [
   'E','R','S','X'
 ];
 
-function startGame() {
+function startGame(){
   let nameInput = document.getElementById('playerName').value.trim();
   if(nameInput === '') { alert('Please enter your name'); return; }
   window.playerName = nameInput;
 
   document.getElementById('startScreen').style.display = 'none';
   document.getElementById('gameScreen').style.display = 'block';
-  // clear all inputs
-  for(let i=0;i<16;i++) document.getElementById('cell'+i).value = '';
+
+  // clear inputs
+  for(let i=0;i<16;i++) document.getElementById('cell'+i).value='';
 }
 
-function checkAnswers() {
+function checkAnswers(){
   let score = 0;
   for(let i=0;i<16;i++){
-    let user = document.getElementById('cell'+i).value.toUpperCase();
-    if(user === answers[i]) score+=1;
+    let val = document.getElementById('cell'+i).value.toUpperCase();
+    if(val === answers[i]) score++;
   }
-
-  document.getElementById('gameScreen').style.display = 'none';
-  document.getElementById('gameOverScreen').style.display = 'block';
-  document.getElementById('finalMessage').innerHTML = `Thank you ${window.playerName}! Your score: ${score}/16`;
+  document.getElementById('gameScreen').style.display='none';
+  document.getElementById('gameOverScreen').style.display='block';
+  document.getElementById('finalMessage').innerText = `Thank you ${window.playerName}! Your score: ${score}/16`;
 }
 
-function playAgain() {
-  document.getElementById('gameOverScreen').style.display = 'none';
-  document.getElementById('startScreen').style.display = 'block';
-  document.getElementById('playerName').value = '';
+function playAgain(){
+  document.getElementById('gameOverScreen').style.display='none';
+  document.getElementById('startScreen').style.display='block';
+  document.getElementById('playerName').value='';
 }
 </script>
 
